--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "axios": "^1.6.1",
     "core-js": "^3.8.3",
+    "firebase": "^8.10.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5"
   },
